--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -82,6 +82,8 @@
                       background: #63584E;
                       box-shadow: 4px 4px rgba(0,0,0,0.1);
                       text-decoration: none;
+                      width: 250px;
+                      margin: 0px auto;
 
                       &.btn-2 {
                         background: #849189;
